fix/faas-1506: removed unnecessary z-index value

--- a/assets/header.scss
+++ b/assets/header.scss
@@ -6,7 +6,6 @@ body {
   --search-bar-placeholder-color: var(--price-old-color);
   --search-bar-placeholder-color-focus: var(--search-bar-placeholder-color);
   --header-icon-color: #4c4c4c;
-  --header-z-index: 3;
 }
 
 .sf-top-bar__center,
